@@ -28,6 +28,7 @@ ChangeLog
 [-] * Properly detect user home directory.
 [+] * Improved MMS notifications encoding.
 [+] * Allow to specify MMS notification class.
+[+] * Implemented decoding of MMS notification (bug #1100).
     
 20100106 - 1.27.90
 
